# open_ptrack_v2

detection/launch/: realsense_frames.launch  skeleton_detector_realsense.launch
docker/open_ptrack/: Dockerfile
docker/open_ptrack-dep/: Dockerfile
openpose_wrapper/: CMakeLists.txt  README.md  package.xml
openpose_wrapper/apps/: opw_3d_projector_node.cpp
openpose_wrapper/config/: opw_configuration.yaml
openpose_wrapper/include/openpose_wrapper/: consumer.h  producer.h  projector.h  queue.h  wrapper.h
openpose_wrapper/include/openpose_wrapper/commons/: commons.h
openpose_wrapper/include/openpose_wrapper/skeletons/: types.h  utils.h
openpose_wrapper/launch/: custom_configuration_example.launch  opw_3d_default.launch  opw_default.launch
openpose_wrapper/msg/: Box.msg  KinematicState.msg  Link.msg  Marker.msg  Skeleton.msg  SkeletonGroup.msg
openpose_wrapper/scripts/: opw2rtpose.py  opw_skeleton_viewer.py
openpose_wrapper/src/: consumer.cpp  main.cpp  producer.cpp  projector.cpp  queue.cpp  wrapper.cpp
openpose_wrapper/src/skeletons/: types.cpp  utils.cpp
opt_calibration/apps/: listener.py
opt_calibration/conf/: camera_network.yaml  camera_network_realsense.yaml  opt_calibration.rviz
rtpose_wrapper/include/caffe/util/: cudnn.hpp
