<?xml version="1.0"?>
<package format="2">
  <name>openpose_wrapper</name>
  <version>0.0.0</version>
  <description>The openpose_wrapper package</description>

  <maintainer email="matteo.terreran@gmail.com">Matteo Terreran</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
